# quickcall-voiceover

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  test_install.sh
.github/workflows/: publish-pypi.yml
config/: quickcall_connect.txt  quickcall_demo.txt  voice_config.json
quickcall_voiceover/: __init__.py  cli.py  generator.py
